# nvshmem-db

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  README.md  all.yaml  ansible.cfg  bench.yaml  clean.yaml  compile.yaml  hosts.txt  inventory.ini  run-benchmarks.yaml  setup.yaml  sync.yaml
benchmarks/01_put_coalescing/: CMakeLists.txt  README.md  bench.sh  nvshmem_put_coalescing.cu  run.sh
benchmarks/02_shuffle/: CMakeLists.txt  README.md  bench.sh  bench_shuffle.cpp  bench_shuffle.cu  run.sh
benchmarks/03_packet_size/: CMakeLists.txt  packet_size.cu
benchmarks/03_packet_size_put_nbi/: CMakeLists.txt  README.md  packet_size.cu  run.sh
benchmarks/03_single_multi_launch/: CMakeLists.txt  bench.sh  single_multi_launch.cu
benchmarks/04_packet_size_fcollect/: CMakeLists.txt  README.md  packet_size.cu
benchmarks/05_1_single_multi_launch_simple/: CMakeLists.txt  run.sh  single_multi_launch_simple.cu
benchmarks/05_put_granularity/: put_granularity.cu
benchmarks/05_single_multi_launch/: CMakeLists.txt  README.md  run.sh  single_multi_launch.cu  single_multi_launch_simple.cu
benchmarks/06_put_granularity/: CMakeLists.txt  put_granularity.cu  run.sh
benchmarks/07_sparse_sending/: CMakeLists.txt  sparse_sending.cu
benchmarks/07_sparse_sending_multi_pe/: CMakeLists.txt  run.sh  sparse_sending_multi_pe.cu
benchmarks/08_sparse_sending_multi_pe/: CMakeLists.txt  run.sh
benchmarks/08_tuple_scan/: CMakeLists.txt  README.md  run.sh  tuple_scan.cu
benchmarks/09_single_thread_send/: CMakeLists.txt  run.sh  single_thread_send.cu
benchmarks/10_blocking_put/: CMakeLists.txt  README.md  blocking_put.cu
benchmarks/nvshmem_put_coalescing/: CMakeLists.txt  nvshmem_put_coalescing.cpp
benchmarks/nvshmem_shuffle/: CMakeLists.txt
benchmarks/results/: 02_shuffle_new.csv  02_shuffle_scan.csv  06_put_granularity.csv  08_tuple_scan.csv  09_gpu_cpu_st.csv  11_kernel_launch_overhead.csv
benchmarks/tools/: 01_plot.py  02_shuffle.py  03_plot.py  05_plot.py  05_plot_simple.py  06_plot.py  06_plot_alt.py  06_plot_threads.py  06_plot_threads_sep_0.py  06_plot_threads_sep_1.py  08_plot.py  08_tuple_scan_plot.py  08_tuple_scan_plot_diff.py  09_gpu_cpu_st.py  11_kernel_launch_overhead.py  benchmark_main.py  blocking_non_blocking_barchart.py
benchmarks/utils/: Meas.cuh  NVSHMEMUtils.cuh
docs/: BENCHMARK.md  LABBOOK.md  dev_env.sh
docs/presentation/: backup_slides.tex  main.tex
docs/presentation/tikz/: cpu_in.tex  cpu_out.tex  shuffle_concept.tex  shuffle_histogram.tex  shuffle_sending.tex  sym_mem.tex
docs/report/: CPUGPURDMA.tex  bibliography.bib  conclusionoutlook.tex  discussion.tex  distributedshuffle.tex  evaluation.tex  implementationdetails.tex  introduction.tex  main.tex  microbenchmarks.tex
docs/report/tikz/: cpu_in.tex  cpu_out.tex  sym_mem.tex
inc/: BaselineShuffle.h  Macros.cuh  NVSHMEMUtils.cuh  Shuffle.h  SomeLibraryInterfaceFunctions.h  send_buffers.h  shuffle.h  shuffle.tpp  shuffle_buffers.h  shuffle_data.h  shuffle_data.tpp  shuffle_data_tmp.h
src/: BaselineShuffle.cu  CMakeLists.txt  Shuffle.cu  SomeLibraryInterfaceFunctions.cu  SomeTest.cpp  TestNVShMemHelloWorld.cu  baseline_shuffle.cu  send_buffers.cu  shuffle.cu  shuffle_buffers.cu  shuffle_data.cu  shuffle_data_tmp.cu
test/: CMakeLists.txt
test/src/: CMakeLists.txt  shuffleTest.cu  testA.cpp
test/src/01_exampleTest/: CMakeLists.txt  exampleTest.cpp  example_test.cpp
test/src/02_nvshmemHelloWorld/: CMakeLists.txt  nvshmemHelloWorld.cu  nvshmem_hello_world.cu
test/src/03_shuffleTest/: CMakeLists.txt  run_nvshmem.sh  shuffleTest.cu  shuffle_test.cu
test/src/04_baselineTest/: CMakeLists.txt  baselineTest.cpp
tools/: benchmark_main.py  benchmark_visualize.py
