project(bench_04_packet_size_fcollect LANGUAGES CXX CUDA)
add_executable(bench_04_packet_size_fcollect packet_size.cu)
add_dependencies(bench_04_packet_size_fcollect nvshmem-db)
target_link_libraries(bench_04_packet_size_fcollect nvshmem-db)
set_property(TARGET bench_04_packet_size_fcollect PROPERTY POSITION_INDEPENDENT_CODE ON)
set_target_properties(bench_04_packet_size_fcollect PROPERTIES CUDA_SEPARABLE_COMPILATION ON CUDA_RESOLVE_DEVICE_SYMBOLS ON)
