add_executable(bench_05_single_multi_launch single_multi_launch.cu)
add_dependencies(bench_05_single_multi_launch nvshmem nvshmem-db baseline-db)
target_link_libraries(bench_05_single_multi_launch nvshmem nvshmem-db baseline-db)
set_property(TARGET bench_05_single_multi_launch PROPERTY POSITION_INDEPENDENT_CODE ON)
