project(bench_05_single_multi_launch LANGUAGES CXX CUDA)

add_executable(bench_05_single_multi_launch single_multi_launch.cu)

add_dependencies(bench_05_single_multi_launch nvshmem nvshmem-db rdmapp)
target_link_libraries(bench_05_single_multi_launch nvshmem nvshmem-db rdmapp)

set_property(TARGET bench_05_single_multi_launch PROPERTY POSITION_INDEPENDENT_CODE ON)

set_target_properties(bench_05_single_multi_launch PROPERTIES CUDA_SEPARABLE_COMPILATION ON CUDA_RESOLVE_DEVICE_SYMBOLS ON)
