project(bench_07_sparse_sending_multi_pe LANGUAGES CXX CUDA)
add_executable(bench_07_sparse_sending_multi_pe sparse_sending_multi_pe.cu)
add_dependencies(bench_07_sparse_sending_multi_pe nvshmem-db)
target_link_libraries(bench_07_sparse_sending_multi_pe nvshmem-db)
set_property(TARGET bench_07_sparse_sending_multi_pe PROPERTY POSITION_INDEPENDENT_CODE ON)
set_target_properties(bench_07_sparse_sending_multi_pe PROPERTIES CUDA_SEPARABLE_COMPILATION ON CUDA_RESOLVE_DEVICE_SYMBOLS ON)
