
add_executable(02_nvshmemHelloWorld nvshmemHelloWorld.cu)

target_link_libraries(02_nvshmemHelloWorld nvshmem)

set_property(TARGET 02_nvshmemHelloWorld PROPERTY POSITION_INDEPENDENT_CODE ON)
set_target_properties(02_nvshmemHelloWorld PROPERTIES CUDA_SEPARABLE_COMPILATION ON CUDA_RESOLVE_DEVICE_SYMBOLS ON)

add_test(NAME 02_nvshmemHelloWorld COMMAND 02_nvshmemHelloWorld)
